# sailboat-simulator

./: .gitignore  Dockerfile  README.md  requirements.txt
.github/workflows/: docker-publish.yml
launch/: launch.py  launch_graph.py
scripts/: extract_dynamics.py  play.py  run_simulation.py  run_simulation_graph.py  test_controller.py
src/boat_msgs/: CMakeLists.txt  README.md  package.xml
src/boat_msgs/msg/: BoatInfo.msg  Buoy.msg  Color.msg  EnvironmentCreation.msg  Heading.msg  Location.msg  Route.msg  RudderAngle.msg  SailAngle.msg  Wind.msg
src/controller/: README.md  package.xml  setup.py
src/controller/controller/: lqr.py  node.py  pid.py  sail_controller.py  utils.py
src/controller/launch/: controller.launch.py
src/controller/resource/: parameters.yaml
src/graph_route_planner/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/graph_route_planner/assets/: Landgraben.kml  OpenWater.kml  Test.kml
src/graph_route_planner/graph_route_planner/: __init__.py  cli.py  geometry.py  graph.py  map_loader.py  node.py  planner.py  plotting.py  sailing.py  scenario.py  viewer.py
src/graph_route_planner/launch/: graph_route_planner.launch.py
src/graph_route_planner/resource/: parameters.yaml
src/graph_route_planner/test/: test_cli.py  test_graph_cache.py  test_map_loader.py  test_planner.py  test_plotting.py  test_replanning.py  test_sailing.py  test_sailing_pinned.py  test_segment_cost.py  test_viewer.py
src/route_follower/: package.xml  setup.py
src/route_follower/launch/: route_follower.launch.py
src/route_follower/resource/: parameters.yaml
src/route_follower/route_follower/: __init__.py  maneuver_action.py  node.py  utils.py
src/route_follower/test/: conftest.py  test_maneuvers.py  test_step.py
src/route_planner/: README.md  package.xml  setup.py
src/route_planner/launch/: route_planner.launch.py
src/route_planner/resource/: parameters.yaml
src/route_planner/route_planner/: node.py  planner.py  segment_action.py  utils.py  waypoint.py
src/route_planner/test/: test_maneuver_action.py  test_planner.py  test_segment_action.py  test_utils.py  test_waypoint.py
src/simulation/: README.md  package.xml  setup.py
src/simulation/launch/: simulation.launch.py
src/simulation/resource/: sailboat.xml
src/simulation/simulation/: build_env.py  node.py  sailboat_physics.py  sailboat_simulation.py
src/simulation/test/: test_sailboat_physics.py
